--- a/UI/forms/TabWidget/FormatWidget.ui
+++ b/UI/forms/TabWidget/FormatWidget.ui
@@ -68,6 +68,9 @@
         </item>
         <item>
          <widget class="QToolButton" name="toolButton_Start">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>91</horstretch>
